samples/_failures_safe/1761191429_86b18a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_655675a2.c: In function ‘main’:
./samples/SAFE/__tmp_655675a2.c:147:1: error: expected declaration or statement at end of input
  147 | int main() {
      | ^~~
